[B]Version 0.3.1 - fightnight[/B]
- Fixed empty folder on alternative list.

[B]Version 0.3.0 - fightnight[/B]
- Added support for embed channel IDs (plugin://plugin.video.veetle/?channel=example1234)
- Added bitrate, thumbnail and watchers info.

[B]Version 0.2.5 - lambda[/B]
- Added greek translation.

[B]Version 0.2.4 - fightnight[/B]
- Fixed empty channel folder list (now using official veetle list). More complete list switch on addon settings.
- Fixed xbmc freeze if plays an offline id.
- Added strings for translation.
- Added portuguese translation.

[B]Version 0.2.3 - fightnight[/B]
- Fixed akamaisecurehd script error.
- Bumped xbmc.python to 2.1.0.

[B]Version 0.2.2 - sissbruecker[/B]
- Added more info labels in category view:
    - Director: Veetle username
    - Genre: Veetle category
    - Tagline: Channel description
    - Plot: Schedule

[B]Version 0.2.1 - sissbruecker[/B]
- Fixed caching problem - channels/schedule data is now only cached for 10 minutes
- Added some basic logging

[B]Version 0.2.0 - sissbruecker[/B]
- Refactoring to several modules/objects
- Loads channel/schedule data from veetleguide.appspot.com
- Caches channel/schedule data to prevent reloading of data for each view
- Sort channels by popularity / current viewers
- Show channel count next to category
- Show current schedule item next to channel in category view
- Added schedule view
- Improved label formatting

[B]Version 0.1.6 - t0mm0[/B]
- fix breakage due to site changes

[B]Version 0.1.5 - t0mm0[/B]
- temporarily(?) remove schedule code due to site changes

[B]Version 0.1.4 - t0mm0[/B]
- more error handling

[B]Version 0.1.3 - t0mm0[/B]
- quick small fix for older python versions

[B]Version 0.1.2 - t0mm0[/B]
- Schedule grabbing (turn off in plugin settings)

[B]Version 0.1.1 - t0mm0[/B]
- Quick fix for missing large thumbnail on a channel

[B]Version 0.1.0 - t0mm0[/B]
- Initial version