@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.veetle" version="0.3.1" name="Veetle" provider-name="fightnight (creator: t0mm0)">
+<addon id="plugin.video.veetle" version="0.3.2" name="Veetle" provider-name="fightnight (creator: t0mm0)">
     <requires>
+        <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
         <import addon="script.common.plugin.cache" version="1.3.0"/>
     </requires>
