@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <strings>
     <string id="30000">Erro de Veetle</string>
-    <string id="30001">Stream não disponivel ou offline.</string>
+    <string id="30001">Stream não disponível ou offline.</string>
     <string id="30100">Apanhar Horário</string>
 	<string id="30101">Usar listagem de canais oficial</string>
 	<string id="40001">Categorias</string>
 	<string id="40002">Horários</string>
 	<string id="40003">Todos</string>
-	<string id="40004">Entertenimento</string>
+	<string id="40004">Entretenimento</string>
 	<string id="40005">Séries</string>
 	<string id="40006">Animação</string>
 	<string id="40007">Desporto</string>
