@@ -1,3 +1,7 @@
+[B]Version 0.3.2 - fightnight/Leinad4Mind[/B]
+- Fixed some translations.
+- Fixed embed channel id support.
+
 [B]Version 0.3.1 - fightnight[/B]
 - Fixed empty folder on alternative list.
 
